# BLE-Watch

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  nrf52840dk_nrf52840.overlay  prj.conf  sonar-project.properties
.github/workflows/: build.yml  lint.yml
app/inc/: display_ssd1306.h  gatt_central.h
app/src/: device_information_service.c  display_ssd1306.c
libraries/inc/: device_information_service.h  display_ssd1306.h  rtc_ds3231.h
libraries/src/: device_information_service.c  rtc_ds3231.c
src/: main.c
src/app/inc/: device_information_service.h  gatt_central.h  rtc_ds3231.h
src/app/src/: display_ssd1306.c  gatt_central.c  rtc_ds3231.c
tests/: CMakeLists.txt  prj.conf  testcase.yaml
tests/src/: tests_assert_validation.c
